# RealTimeEdgeDetection

./: .gitignore  README.md
app/: build.gradle.kts
app/src/androidTest/java/com/example/realtimeedgedetection/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/realtimeedgedetection/: CameraHandler.kt  EdgeDetectionServer.kt  GLCameraRenderer.kt  MainActivity.kt  NativeBridge.kt  YuvUtils.kt
app/src/main/java/com/example/realtimeedgedetection/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: themes.xml
app/src/test/java/com/example/realtimeedgedetection/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  main.ts  package-lock.json  package.json
